add edit product's swagger
