# docs/swagger.json
@@ -269,7 +269,26 @@
                         }
                     }
                 ],
-                "responses": {}
+                "responses": {
+                    "200": {
+                        "description": "always return status 200 but body contains error",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/vendora.BaseResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "result": {
+                                            "$ref": "#/definitions/models.ProductEntity"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
             }
         },
         "/mio/download/{token}": {
@@ -412,6 +431,54 @@
                 }
             }
         },
+        "/tags": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "products"
+                ],
+                "summary": "get products with same tags",
+                "parameters": [
+                    {
+                        "description": "slice of tags",
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.TagsInput"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "always return status 200 but body contains error",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/vendora.BaseResult"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "result": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/models.ProductEntity"
+                                            }
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/{id}": {
             "get": {
                 "consumes": [
@@ -425,7 +492,7 @@
                     {
                         "type": "string",
                         "description": "product ID",
-                        "name": "input",
+                        "name": "id",
                         "in": "path",
                         "required": true
                     }
@@ -611,6 +678,17 @@
                 },
                 "title": {
                     "type": "string"
+                }
+            }
+        },
+        "models.TagsInput": {
+            "type": "object",
+            "properties": {
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
